squash! Fix: Se han añadido apellidos en el o-combo tutor del filtro

--- a/cd2024bfs4g1-frontend/src/main/ngx/src/app/main/data/personal-tutor-info/personal-tutor-info.component.css
+++ b/cd2024bfs4g1-frontend/src/main/ngx/src/app/main/data/personal-tutor-info/personal-tutor-info.component.css
@@ -3,12 +3,6 @@
   box-sizing: border-box;
 }
 
-.main-container {
-  width: 100%;
-  height: 100%;
-  overflow-y: auto;
-  padding-top: 20px;
-}
 o-form {
   width: 100%;
   height: 100%;
@@ -17,13 +11,12 @@ o-form {
 
 label {
   display: block;
-  margin: 10px 0 10px 10px;
+  margin: 10px 0 10px 0px;
   font-size: 15px;
   font-weight: bold;
 }
 
-.grid-container,
-.table_container {
+.grid-container {
   width: 96%;
   margin: 5px auto;
   background-color: #f5f0f2;
@@ -32,7 +25,7 @@ label {
   height: auto;
 }
 
-.general_table{
+.general_table {
   width: 98%;
   margin: 0;
 }
@@ -44,32 +37,27 @@ label {
   gap: 10px;
   height: auto;
 }
-
-.nombre {
-  grid-column: 1 / 2;
-}
-
-.apellido {
-  grid-column: 2 / 3;
-}
-
-.apellido2 {
-  grid-column: 1 / 2;
-}
-
-.email{
-  grid-column: 2 / 3;
-}
-
 .general_table {
   background-color: #f5f0f2;
 }
 
-.grid-container .table_container{
+.grid-container .table_container {
   grid-column: 1 / 3;
 }
 
+.foto {
+  grid-column: 1 / 4; 
+  justify-self: center;
+  align-self: center;
+  margin-bottom: 0; 
+  display: flex;   
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 70px;
+}
+
 @media (max-width: 1250px) {
+
   .grid-container,
   .table_container {
     width: 95%;
@@ -82,4 +70,56 @@ label {
 
 }
 
+.grid-container {
+  width: 96%;
+  margin: 5px auto;
+  background-color: #f5f0f2;
+  border-radius: 15px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+}
 
+
+fieldset {
+  border-radius: 15px;
+  padding: 20px;
+  background-color: #f5f0f2;
+  border: solid 1px #ccc;
+  border-radius: 15px;
+  border: solid 1px;
+  padding-left: 20px;
+  padding-right: 20px
+}
+
+.datos {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  grid-column: 1/3;
+}
+
+.login {
+  display: grid;
+  grid-template-columns:  1fr 1fr 1fr 1fr ;
+  grid-column: 1/3;
+}
+.tabla {
+  display: grid;
+  grid-column: 2/3;
+}
+
+.flex{
+  flex-wrap: wrap; 
+}
+
+.personal-data-fields {
+  margin-bottom: 0; 
+  display: flex; 
+  gap: 30px; 
+  align-items: center;
+  justify-content: center;
+}
+.datosPersonales {
+  grid-column: 1 / -1;  
+}
